# terminal-ai-co-agent

./: README.md  __init__.py  coagent.toml  pyproject.toml
src/terminal_ai_co_agent/: __init__.py  __main__.py  app.py  py.typed
src/terminal_ai_co_agent/ai/: __init__.py  provider.py  registry.py  types.py
src/terminal_ai_co_agent/ai/clients/: __init__.py
src/terminal_ai_co_agent/ai/providers/: __init__.py  ollama.py
src/terminal_ai_co_agent/analysis/: __init__.py  dependency.py  security.py  static.py  types.py
src/terminal_ai_co_agent/cli/: __init__.py  agent.py  app.py
src/terminal_ai_co_agent/cli/commands/: __init__.py
src/terminal_ai_co_agent/cli/formatters/: __init__.py
src/terminal_ai_co_agent/cli/prompts/: __init__.py
src/terminal_ai_co_agent/config/: defaults.py  loader.py  types.py
src/terminal_ai_co_agent/context/: __init__.py  collector.py  types.py
src/terminal_ai_co_agent/context/extractors/: __init__.py  source.py  structure.py
src/terminal_ai_co_agent/deployment/: __init__.py  engine.py  types.py
src/terminal_ai_co_agent/deployment/targets/: __init__.py
src/terminal_ai_co_agent/docs/: __init__.py
src/terminal_ai_co_agent/docs/formatters/: __init__.py
src/terminal_ai_co_agent/docs/templates/: __init__.py
src/terminal_ai_co_agent/executor/: __init__.py  command_ops.py  engine.py  file_ops.py  patch.py  sandbox.py  types.py
src/terminal_ai_co_agent/git/: __init__.py  client.py  types.py
src/terminal_ai_co_agent/ide/: __init__.py  lsp.py  types.py
src/terminal_ai_co_agent/ide/adapters/: __init__.py
src/terminal_ai_co_agent/logging/: audit.py  logger.py  types.py
src/terminal_ai_co_agent/memory/: __init__.py  project_knowledge.py  session.py  store.py  types.py
src/terminal_ai_co_agent/memory/backends/: __init__.py  file.py  sqlite.py
src/terminal_ai_co_agent/multi_agent/: __init__.py  coordinator.py  types.py
src/terminal_ai_co_agent/orchestrator/: __init__.py  engine.py  types.py
src/terminal_ai_co_agent/planner/: __init__.py  decomposition.py  engine.py  risk.py  types.py
src/terminal_ai_co_agent/plugins/: __init__.py  hooks.py  loader.py  manager.py  types.py
src/terminal_ai_co_agent/rag/: __init__.py  chunker.py  engine.py  retriever.py  types.py
src/terminal_ai_co_agent/safety/: __init__.py  guard.py  rollback.py  types.py
src/terminal_ai_co_agent/safety/policies/: __init__.py  command.py  file.py
src/terminal_ai_co_agent/testing/: __init__.py  types.py
src/terminal_ai_co_agent/utils/: __init__.py  fs.py  platform.py  text.py  types.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/fixtures/mock_responses/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
