[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminal_ai_co_agent"
version = "0.1.0"
description = "Intelligent software engineering partner that works alongside a human developer through the terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Terminal AI Co-Agent Contributors"}
]
keywords = [
    "ai",
    "cli",
    "developer-tools",
    "software-engineering",
    "code-assistant",
    "llm",
    "multi-model",
    "orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control",
    "Typing :: Typed",
]
requires-python = ">=3.11"

# --- Core Dependencies ---
dependencies = [
    # CLI Framework
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "click>=8.1.0",

    # Async Runtime
    "anyio>=4.6.0",
    "httpx>=0.28.0",

    # Configuration
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # AI / LLM Clients
    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "ollama>=0.4.0",

    # Context & Text Processing
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tiktoken>=0.8.0",
    "textual>=0.85.0",

    # Git Integration
    "pygit2>=1.15.0",
    "gitpython>=3.1.0",

    # Memory & Vector Stores
    "qdrant-client>=1.12.0",
    "chromadb>=0.5.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",

    # RAG & Embeddings
    "sentence-transformers>=3.3.0",

    # Diff & Patching
    "unidiff>=0.7.0",
    "whatthepatch>=1.0.0",

    # Logging & Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "xxhash>=3.5.0",
    "watchfiles>=1.0.0",
    "platformdirs>=4.3.0",
    "filelock>=3.16.0",

    # Documentation Generation
    "jinja2>=3.1.0",
    "mistune>=3.0.0",
]

# --- Optional Dependency Groups ---
[project.optional-dependencies]
# Local model support
local = [
    "llama-cpp-python>=0.3.0",
]

# vLLM provider
vllm = [
    "vllm>=0.6.0",
]

# LSP / IDE integration
ide = [
    "lsprotocol>=2024.0.0",
    "pygls>=1.3.0",
]

# Deployment integrations
deploy = [
    "docker>=7.1.0",
    "kubernetes>=31.0.0",
]

# Development & testing
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "coverage[toml]>=7.6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "black>=24.10.0",
    "isort>=5.13.0",
]

# Documentation building
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

# All extras
all = [
    "terminal_ai_co_agent[local,vllm,ide,deploy,dev,docs]",
]

# --- Entry Points ---
[project.scripts]
coagent = "terminal_ai_co_agent.cli.app:main"

[project.entry-points."coagent.plugins"]
code_review = "plugins.code_review.plugin:CodeReviewPlugin"
lint_integration = "plugins.lint_integration.plugin:LintIntegrationPlugin"
custom_commands = "plugins.custom_commands.plugin:CustomCommandsPlugin"

[project.urls]
Homepage = "https://github.com/terminal-ai-co-agent/terminal-ai-co-agent"
Documentation = "https://terminal-ai-co-agent.readthedocs.io"
Repository = "https://github.com/terminal-ai-co-agent/terminal-ai-co-agent.git"
Issues = "https://github.com/terminal-ai-co-agent/terminal-ai-co-agent/issues"
Changelog = "https://github.com/terminal-ai-co-agent/terminal-ai-co-agent/blob/main/CHANGELOG.md"

# --- Tool Configuration ---
[tool.hatch.build.targets.wheel]
packages = ["src/terminal_ai_co_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/plugins",
    "/docs",
    "/scripts",
    "/tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "coagent.toml",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
]

# --- Pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=terminal_ai_co_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "ai: marks tests that require AI model access",
    "network: marks tests that require network access",
    "local_model: marks tests that require a local model",
]

[tool.coverage.run]
source = ["src/terminal_ai_co_agent"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
]

# --- Ruff (Linting + Formatting) ---
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "plugins"]
extend-exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line-too-long handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "RUF001", # ambiguous unicode characters in docstrings acceptable
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["terminal_ai_co_agent"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# --- MyPy ---
[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "llama_cpp.*",
    "vllm.*",
    "tree_sitter.*",
    "tree_sitter_python.*",
    "tree_sitter_javascript.*",
    "tree_sitter_typescript.*",
]
ignore_missing_imports = true

# --- Black ---
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.egg-info
  | build
  | dist
)/
'''

# --- isort ---
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["terminal_ai_co_agent"]
src_paths = ["src", "tests", "plugins"]
